plot eigenstates successfully

--- a/python/finite_difference_coefficients.ipynb
+++ b/python/finite_difference_coefficients.ipynb
@@ -2,19 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8522d44d-063e-460c-92ff-db82d850464d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
-    "import time as ti\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "%matplotlib inline"
+    "from math import factorial as factorial"
    ]
   },
   {
@@ -27,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cf01e511-1760-4dda-9202-dddea65f8ec4",
    "metadata": {},
    "outputs": [],
@@ -50,7 +44,7 @@
     "        if type(k) is not int:\n",
     "            print(\"Invalid input! The function 'factorial' only accepts non-negative integers.\")\n",
     "        elif k < 0:\n",
-    "            return math.inf\n",
+    "            return None\n",
     "        elif k == 0:\n",
     "            return 1\n",
     "        else:\n",
@@ -85,7 +79,6 @@
     "    \n",
     "    This function generates the difference matrix for a bounded\n",
     "    domain of M grid points. with a difference scheme of order 2m+1.\n",
-    "    Suggestion: use xrange with either bound.\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
@@ -123,7 +116,6 @@
     "    \n",
     "    This function generates the difference matrix for a periodic\n",
     "    domain of M grid points. with a difference scheme of order 2m+1.\n",
-    "    Suggestion: use xrange 'False' bound.\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
@@ -153,58 +145,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def xrange(i, f, n, bound=True):\n",
+    "def spacing(i, f, n, bound=True, periodic=False):\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    \n",
+    "    Create linear n spacing points from i to f.\n",
+    "    Bound spacing includes the initial and final points.\n",
+    "    Periodic spacing includes initial point but exclude final point.\n",
+    "    Neither spacing excludes both i and f.\n",
     "    \n",
     "    \"\"\"\n",
-    "    if bound:\n",
+    "    \n",
+    "    if bound and not periodic:\n",
     "        step_size = (f-i)/(n-1)\n",
+    "        init = i\n",
+    "    elif periodic and not bound:\n",
+    "        step_size = (f-i)/n\n",
     "        init = i\n",
     "    else:\n",
     "        step_size = (f-i)/(n+1)\n",
     "        init = i + step_size\n",
     "        \n",
-    "    result = np.zeros(n)\n",
+    "    array = np.zeros(n)\n",
     "    for step in range(n):\n",
-    "        result[step] = init + step*step_size\n",
+    "        array[step] = init + step*step_size\n",
     "    \n",
-    "    return result"
+    "    return array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9a7b078c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def osc(x):\n",
-    "    return x**2/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2b3a6289",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_ham(bound, potential, dim=1024, order=1):\n",
-    "    # Region to solve\n",
-    "    X = 2*bound\n",
-    "    dX = X/(dim+1)\n",
-    "    x = np.linspace(-bound+dX, bound-dX, dim)\n",
-    "    \n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9a78106",
    "metadata": {},
    "outputs": [],
    "source": []
