--- a/python/finite_difference.ipynb
+++ b/python/finite_difference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "8522d44d-063e-460c-92ff-db82d850464d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,9 @@
     "    Return: float scalar\n",
     "    \n",
     "    \"\"\"\n",
-    "    \n",
+    "    l = int(l)\n",
+    "    m = int(m)\n",
+    "    n = int(n)\n",
     "    coeff = 0\n",
     "    if (m >= l) or (n >= l):\n",
     "        print(\"Invalid inputs! The function 'diff_coeff' requires 0 < m < l and 0 < n < l.\")\n",
@@ -49,6 +51,11 @@
     "        return None\n",
     "    \n",
     "    return coeff\n",
+    "\n",
+    "def dmatrix(l, d='First'):\n",
+    "    def mat(i, j):\n",
+    "        return diff_coeff(l, i, j, d)\n",
+    "    return np.fromfunction(np.vectorize(mat), (l, l))\n",
     "\n",
     "def diff(M, m=1, d='First', bc='Bounded'):\n",
     "    \n",
