--- a/python/fidi.ipynb
+++ b/python/fidi.ipynb
@@ -2,34 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "8522d44d-063e-460c-92ff-db82d850464d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from math import factorial\n",
-    "from scipy import sparse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5001f74d-a689-4ac4-91e1-4d1241127fa5",
-   "metadata": {},
-   "source": [
-    "# Finite Difference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "cf01e511-1760-4dda-9202-dddea65f8ec4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from math import factorial\n",
     "from scipy import sparse\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "# Finite Difference\n",
     "\n",
@@ -44,7 +25,7 @@
     "    l-point stencil with m=(l-1)/2 and l is odd, is called a 'central' finite \n",
     "    difference. For the 'forward' and 'backward' difference schemes, m is 0 \n",
     "    and l-1, respectively.\n",
-    "    Return: float scalar\n",
+    "    Return: scalar\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
@@ -95,7 +76,8 @@
     "        print(\"Invalid inputs! Expecting integers for M and m, where M >= 2m+1.\")\n",
     "        return None\n",
     "    elif bc == 'Bounded':\n",
-    "        for i in range(M):\n",
+    "        print('Generating difference matrix...')\n",
+    "        for i in tqdm(range(M)):\n",
     "            for j in range(M):\n",
     "                if np.abs(j-i) <= m:\n",
     "                    I.append(i)\n",
@@ -104,7 +86,8 @@
     "                else:\n",
     "                    continue\n",
     "    elif bc == 'Periodic':\n",
-    "        for i in range(M):\n",
+    "        print('Generating difference matrix...')\n",
+    "        for i in tqdm(range(M)):\n",
     "            for j in range(M):\n",
     "                if np.abs(j-i) <= m:\n",
     "                    I.append(i)\n",
@@ -131,113 +114,6 @@
     "    Periodic spacing includes initial point but exclude final point.\n",
     "    Neither spacing excludes both i and f.\n",
     "    Return: numpy array\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    if bound and not periodic:\n",
-    "        step_size = (f-i)/(n-1)\n",
-    "        init = i\n",
-    "    elif periodic and not bound:\n",
-    "        step_size = (f-i)/n\n",
-    "        init = i\n",
-    "    else:\n",
-    "        step_size = (f-i)/(n+1)\n",
-    "        init = i + step_size\n",
-    "        \n",
-    "    array = np.zeros(n)\n",
-    "    for step in range(n):\n",
-    "        array[step] = init + step*step_size\n",
-    "    \n",
-    "    return array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3541fc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bounded_diff(M, m=1):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    This function generates the difference matrix for a bounded\n",
-    "    domain of M grid points. with a difference scheme of order 2m+1.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    matrix = np.zeros((M, M))\n",
-    "    l = 2*m+1\n",
-    "    \n",
-    "    if (M < l) or (type(M) is not int) or (type(m) is not int):\n",
-    "        print(\"Invalid inputs! Expecting integers for M and m, where M >= 2m+1.\")\n",
-    "        return None\n",
-    "    else:\n",
-    "        for i in range(M):\n",
-    "            for j in range(M):\n",
-    "                if (i < m) and (j < l):\n",
-    "                    matrix[i, j] = diff_coeff(l, i, j)\n",
-    "                elif (M-i <= m) and (M-j <= l):\n",
-    "                    matrix[i, j] = diff_coeff(l, i+l-M, j+l-M)\n",
-    "                elif np.abs(j-i) <= m:\n",
-    "                    matrix[i, j] = diff_coeff(l, m, j-i+m)\n",
-    "                else:\n",
-    "                    continue\n",
-    "    \n",
-    "    return matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "30a140e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def periodic_diff(M, m=1):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    This function generates the difference matrix for a periodic\n",
-    "    domain of M grid points. with a difference scheme of order 2m+1.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    matrix = np.zeros((M, M))\n",
-    "    l = 2*m+1\n",
-    "    \n",
-    "    if (M < l) or (type(M) is not int) or (type(m) is not int):\n",
-    "        print(\"Invalid inputs! Expecting integers for M and m, where M >= 2m+1.\")\n",
-    "        return None\n",
-    "    else:\n",
-    "        for i in range(M):\n",
-    "            for j in range(M):\n",
-    "                if np.abs(j-i) <= m:\n",
-    "                    matrix[i, j] = diff_coeff(l, m, j-i+m)\n",
-    "                elif M-np.abs(j-i) <= m:\n",
-    "                    matrix[i, j] = diff_coeff(l, m, int(np.sign(j-i)*(np.abs(j-i)-M)+m))\n",
-    "                else:\n",
-    "                    continue\n",
-    "    \n",
-    "    return matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e263d1c3-94c7-4466-9894-df19b69d7764",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def spacing(i, f, n, bound=True, periodic=False):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    Create linear n spacing points from i to f.\n",
-    "    Bound spacing includes the initial and final points.\n",
-    "    Periodic spacing includes initial point but exclude final point.\n",
-    "    Neither spacing excludes both i and f.\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
